--- a/build.xml
+++ b/build.xml
@@ -31,31 +31,31 @@
 	<target name="dist" depends="build">
 		<jar jarfile="${jars}/jteach-server-${version}.jar" basedir="${classes}">
 			<include name="**/*"/>
-			<exclude name="com/webssky/jteach/client/**/*"/>
+			<exclude name="org/lionsoul/jteach/client/**/*"/>
 			<!--manifest information setting-->
 			<manifest>
-				<attribute name="Main-Class" value="com.webssky.jteach.server.JServer"/>
+				<attribute name="Main-Class" value="org.lionsoul.jteach.server.JServer"/>
 				<attribute name="Class-Path" value=""/>
 			</manifest>
 		</jar>
 		<jar jarfile="${jars}/jteach-client-${version}.jar" basedir="${classes}">
 			<include name="**/*"/>
-			<exclude name="com/webssky/jteach/server/**/*"/>
+			<exclude name="org/lionsoul/jteach/server/**/*"/>
 			<!-- manifest information setting -->
 			<manifest>
-				<attribute name="Main-Class" value="com.webssky.jteach.client.JClient"/>
+				<attribute name="Main-Class" value="org.lionsoul.jteach.client.JClient"/>
 				<attribute name="Class-Path" value=""/>
 			</manifest>
 		</jar>
 		<jar jarfile="${jars}/rmi-stub.jar" basedir="${classes}">
-			<include name="com/webssky/jteach/rmi/**/*"/>
+			<include name="org/jteach/jteach/rmi/**/*"/>
 		</jar>
 	</target>
 	
 	<!--Java Document-->
 	<target name="all" depends="dist">
 		<echo message="------------------------Making Jteach Document------------------------"/>
-		<javadoc packagenames="com.webssky.jteach.*" sourcepath="${sources}"
+		<javadoc packagenames="org.lionsoul.jteach.*" sourcepath="${sources}"
 			destdir="${api}" bottom="${bottom}" charset="UTF-8" author="true">
 			<classpath>
 				<pathelement location="${classes}"/>
