--- a/build.xml
+++ b/build.xml
@@ -1,26 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="jteach" default="usage" basedir=".">
-	<target name="init">
-		<echo message="-----------------------------------------------------------" />
-		<echo message="-------------------BUILDING JTEACH PACKAGE-----------------" />
-		<echo message=""/>
-		<property name="bottom" value="jteach 2010-2021"/>
-		<property name="jars" value="${basedir}"/>
-		<property name="sources" value="${basedir}/src"/>
-		<property name="classes" value="${basedir}/classes"/>
-		<property name="version" value="1.3.7"/>
-		<property name="api" value="${basedir}/doc"/>
-		<property name="resource" value="res"/>
-		
-		<mkdir dir="${classes}"/>
-		<mkdir dir="${api}"/>
-		<mkdir dir="${classes}/${resource}"/>
-	</target>
+	<property name="bottom" value="jteach 2010-2021"/>
+	<property name="jars" value="${basedir}"/>
+	<property name="sources" value="${basedir}/src"/>
+	<property name="classes" value="${basedir}/classes"/>
+	<property name="lib.dir" value="lib"/>
+	<property name="version" value="1.3.7"/>
+	<property name="api" value="${basedir}/doc"/>
+	<property name="resource" value="res"/>
+	<delete dir="${classes}"/>
+	<mkdir dir="${classes}"/>
+	<mkdir dir="${api}"/>
+	<mkdir dir="${classes}/${resource}"/>
+
+	<!-- class path define -->
+	<path id="classpath">
+		<fileset dir="${lib.dir}">
+			<include name="*.jar" />
+		</fileset>
+	</path>
 	
 	<!--build-->
-	<target name="build" depends="init">
-		<echo message="----------------------Compiling Application----------------"/>
-		<javac srcdir="${sources}" destdir="${classes}" includes="**/*"/>
+	<target name="build" description="Compile main source java files">
+		<javac destdir="${classes}" includes="**/*" encoding="utf-8">
+			<src path="${sources}"/>
+			<classpath refid="classpath"/>
+		</javac>
 		<!--copy the resource image-->
 		<copy todir="${classes}/${resource}">
 			<fileset dir="${sources}/${resource}"/>
@@ -28,12 +33,19 @@
 	</target>
 	
 	<!--Archive-->
-	<target name="dist" depends="build">
+	<target name="dist" depends="build" description="Compress the java class files to jar">
+		<delete file="${jars}/*.jar" />
+		<tstamp>
+			<format property="TODAY" pattern="yyyy-MM-dd HH:mm:ss" />
+		</tstamp>
 		<jar jarfile="${jars}/jteach-server-${version}.jar" basedir="${classes}">
 			<include name="**/*"/>
 			<exclude name="org/lionsoul/jteach/client/**/*"/>
 			<!--manifest information setting-->
 			<manifest>
+				<attribute name="Built-By" value="Lion" />
+				<attribute name="Implementation-Version" value="${version}" />
+				<attribute name="Built-Date" value="${TODAY}" />
 				<attribute name="Main-Class" value="org.lionsoul.jteach.server.JServer"/>
 				<attribute name="Class-Path" value=""/>
 			</manifest>
@@ -43,12 +55,15 @@
 			<exclude name="org/lionsoul/jteach/server/**/*"/>
 			<!-- manifest information setting -->
 			<manifest>
+				<attribute name="Built-By" value="Lion" />
+				<attribute name="Implementation-Version" value="${version}" />
+				<attribute name="Built-Date" value="${TODAY}" />
 				<attribute name="Main-Class" value="org.lionsoul.jteach.client.JClient"/>
-				<attribute name="Class-Path" value=""/>
+				<attribute name="Class-Path" value="./lib/*.jar"/>
 			</manifest>
-		</jar>
-		<jar jarfile="${jars}/rmi-stub.jar" basedir="${classes}">
-			<include name="org/jteach/jteach/rmi/**/*"/>
+			<zipfileset src="${lib.dir}">
+				<include name="*.jar"/>
+			</zipfileset>
 		</jar>
 	</target>
 	
@@ -64,7 +79,7 @@
 	</target>
 	
 	<target name="usage">
-		<echo message="*** Jteach ANT Build Script ***"/>
+		<echo message="*** jteach ANT Build Script ***"/>
 		<echo message="Usage: "/>
 		<echo message="   ant [target]"/>
 		<echo message=""/>     
